make.conf added candy

--- a/configs/make.conf
+++ b/configs/make.conf
@@ -1,6 +1,6 @@
 ## LOCATION: /etc/portage/make.conf
 ## AUTHOR:   AISK11
-## VERSION:  1.0.0
+## VERSION:  1.0.1
 ## CREATED:  2022-03-07
 ## UPDATED:  2022-03-07
 
@@ -18,7 +18,7 @@ MAKEOPTS="-j8 -l8"
 EMERGE_DEFAULT_OPTS="--jobs=8 --load-average=8 --ask-enter-invalid --keep-going --with-bdeps=y"
 
 ## Portage additional options:
-FEATURES="sandbox usersandbox collision-protect cgroup parallel-install noinfo strict"
+FEATURES="sandbox usersandbox collision-protect cgroup parallel-install noinfo strict candy"
 PORTAGE_NICENESS="19"
 PORTAGE_IONICE_COMMAND="ionice -c 3 -p \${PID}"
 
