--- a/configs/make.conf
+++ b/configs/make.conf
@@ -1,11 +1,11 @@
 ## LOCATION: /etc/portage/make.conf
 ## AUTHOR:   AISK11
-## VERSION:  1.0.1
+## VERSION:  1.0.2
 ## CREATED:  2022-03-07
-## UPDATED:  2022-03-07
+## UPDATED:  2022-03-10
 
-## For per-package basis, refer to /etc/portage/package.use/
-## See all variables with $(emerge --info --verbose)
+## Per-package config: /etc/portage/package.use/
+## See all variables: $(emerge --info --verbose)
 
 ## C, C++, FORTRAN 77, FORTRAN:
 CFLAGS="-march=native -O2 -pipe"
@@ -28,7 +28,7 @@ ACCEPT_LICENSE="-* @FREE"
 ## Download mirror:
 GENTOO_MIRRORS="rsync://rsync.mirrorservice.org/distfiles.gentoo.org/"
 
-## Use glags (https://www.gentoo.org/support/use-flags/ OR https://packages.gentoo.org/useflags/global):
+## Use flags (https://www.gentoo.org/support/use-flags/ OR https://packages.gentoo.org/useflags/global):
 USE="-systemd -zeroconf -emacs -xemacs -wayland -gnome -gnome-keyring -kde -plasma \
 hardened unicode zsh-completion X \
 nvidia"
