--- a/configs/make.conf
+++ b/configs/make.conf
@@ -1,6 +1,6 @@
 ## LOCATION: /etc/portage/make.conf
 ## AUTHOR:   AISK11
-## VERSION:  1.0.3
+## VERSION:  1.0.4
 ## CREATED:  2022-03-07
 ## UPDATED:  2022-03-12
 
@@ -29,8 +29,8 @@ ACCEPT_LICENSE="-* @FREE"
 GENTOO_MIRRORS="rsync://rsync.mirrorservice.org/distfiles.gentoo.org/"
 
 ## Use flags (https://www.gentoo.org/support/use-flags/ OR https://packages.gentoo.org/useflags/global):
-USE="-systemd -zeroconf -emacs -xemacs -wayland -gnome -gnome-keyring -kde -plasma \
-crypt lvm btrfs elogind hardened unicode zsh-completion X \
+USE="-lvm -systemd -zeroconf -emacs -xemacs -wayland -gnome -gnome-keyring -kde -plasma \
+crypt btrfs elogind hardened unicode zsh-completion X \
 nvidia"
 
 ## Portage directories:
