--- a/configs/make.conf
+++ b/configs/make.conf
@@ -1,6 +1,6 @@
 ## LOCATION: /etc/portage/make.conf
 ## AUTHOR:   AISK11
-## VERSION:  1.0.5
+## VERSION:  1.0.6
 ## CREATED:  2022-03-07
 ## UPDATED:  2022-03-12
 
@@ -30,7 +30,7 @@ GENTOO_MIRRORS="rsync://rsync.mirrorservice.org/distfiles.gentoo.org/"
 
 ## Use flags (https://www.gentoo.org/support/use-flags/ OR https://packages.gentoo.org/useflags/global):
 USE="-lvm -systemd -zeroconf -emacs -xemacs -wayland -gnome -gnome-keyring -kde -plasma \
-crypt btrfs elogind hardened unicode ap fasteap wimax wps p2p zsh-completion X \
+crypt btrfs elogind hardened unicode ap fasteap wps p2p zsh-completion X \
 nvidia"
 
 ## Portage directories:
