--- a/configs/make.conf
+++ b/configs/make.conf
@@ -1,48 +1,53 @@
-## LOCATION: /etc/portage/make.conf
-## AUTHOR:   AISK11
-## VERSION:  1.0.8
-## CREATED:  2022-03-07
-## UPDATED:  2022-03-13
+## LOCATION:     /etc/portage/make.conf
+## AUTHOR:       AISK11
+## VERSION:      1.0.9
+## CREATED:      2022-03-07
+## UPDATED:      2022-03-19
+## DEPENDENCIES: sys-apps/portage
+## PURPOSE:      Gentoo package manager configuration.
 
 ## Per-package config: /etc/portage/package.use/
 ## See all variables: $(emerge --info --verbose)
 
-## C, C++, FORTRAN 77, FORTRAN:
+## Number of CPU cores, find value by $(nproc) or use RAM / 2GB.
+CORES="8"
+
+## C, C++, FORTRAN 77, FORTRAN.
 CFLAGS="-march=native -O2 -pipe"
 CXXFLAGS="${CFLAGS}"
 FFLAGS="${CFLAGS}"
 FCFLAGS="${CFLAGS}"
 
-## Parallel make jobs, find by using $(nproc), or RAM / 2GB:
-MAKEOPTS="-j8 -l8"
-EMERGE_DEFAULT_OPTS="--jobs=8 --load-average=8 --ask-enter-invalid --keep-going --with-bdeps=y"
+## Compilation via make & via emerge.
+MAKEOPTS="-j${CORES} -l${CORES}"
+EMERGE_DEFAULT_OPTS="--jobs=${CORES} --load-average=${CORES} --ask-enter-invalid --keep-going --with-bdeps=y"
 
-## Portage additional options:
+## Portage additional options.
 FEATURES="sandbox usersandbox collision-protect cgroup parallel-install noinfo strict candy"
 PORTAGE_NICENESS="19"
 PORTAGE_IONICE_COMMAND="ionice -c 3 -p \${PID}"
 
-## FSF by default:
+## FSF by default.
 ACCEPT_LICENSE="-* @FREE"
 
-## Download mirror:
+## Download mirror.
 GENTOO_MIRRORS="rsync://rsync.mirrorservice.org/distfiles.gentoo.org/"
 
-## Use flags (https://www.gentoo.org/support/use-flags/ OR https://packages.gentoo.org/useflags/global):
+## Use flags (https://www.gentoo.org/support/use-flags/ OR https://packages.gentoo.org/useflags/global).
 USE="-lvm -systemd -zeroconf -emacs -xemacs -wayland -gnome -gnome-keyring -kde -plasma \
-crypt btrfs elogind hardened unicode ap fasteap wps p2p zsh-completion X \
+crypt btrfs initramfs elogind hardened unicode ap fasteap wps p2p zsh-completion X \
 nvidia"
 
-## Portage directories:
+## Portage directories.
 PORTDIR="/var/db/repos/gentoo"
 DISTDIR="/var/cache/distfiles"
 PKGDIR="/var/cache/binpkgs"
 
-## English language for build output:
+## English language for build output.
 LC_MESSAGES=C
 
 
-## TODO:
+## TODO.
 #CONFIG_PROTECT="/var/bind"
 #ACCEPT_KEYWORDS="~amd64"
 #VIDEO_CARDS="nvidia intel"
